docs: add Teil 1 cover

--- a/docs/repetitorium/Repetitorium SE.tex
+++ b/docs/repetitorium/Repetitorium SE.tex
@@ -208,6 +208,7 @@
 	\mainmatter                        		% Hauptteil (ab hier arab. Seitenzahlen)
 %--------------------------------------------------------------------------
 % Die Kapitel werden in separaten .tex-Dateien abgelegt und hier eingebunden.
+	\input{chapters/teil1}
 	\input{chapters/Software und Software Engineering/index}
 	\input{chapters/Uebersicht ueber die Phasen des Entwicklungszyklus/index}
 	\input{chapters/Prozessmodelle/index}
