docs: wording and formatting updates

--- a/docs/repetitorium/literatur.bib
+++ b/docs/repetitorium/literatur.bib
@@ -140,3 +140,18 @@ and Abrahamsson, Pekka",
     year = 2008
 }
 
+@Inbook{SR94,
+    author="Schader, Martin
+and Rundshagen, Michael",
+    title="Einleitung",
+    bookTitle="Objektorientierte Systemanalyse: Eine Einf{\"u}hrung",
+    year="1994",
+    publisher="Springer Berlin Heidelberg",
+    address="Berlin, Heidelberg",
+    pages="1--11",
+    abstract="Die letzten Jahre zeichnen sich im Bereich der Kostenentwicklung f{\"u}r DV-Systeme durch den einerseits anhaltenden Verfall der Hardwarepreise --- bei kontinuierlich zunehmender Rechnerleistung --- und andererseits durch st{\"a}ndig wachsende Anforderungen an die Software, die zu einem ebenso rapiden Anstieg der Softwareentwicklungskosten gef{\"u}hrt haben, aus. Bedingt durch die zunehmende Gr{\"o}{\ss}e und Komplexit{\"a}t der zu entwickelnden Softwaresysteme vergr{\"o}{\ss}ert sich dabei gleichzeitig der Anteil der Softwarewartungskosten (Kosten f{\"u}r Fehlerbeseitigung und Weiterentwicklung) an den Gesamtkosten eines Softwareprojekts. Dabei erweist sich die Beseitigung von Fehlern eines Softwareprodukts als um so aufwendiger, je sp{\"a}ter diese entdeckt werden. Dies sind unter anderem Gr{\"u}nde f{\"u}r eine gerade im Rahmen der objektorientierten Softwareerstellung starke Betonung der Phasen Analyse und Design, die der Implementation vorausgehen. Nicht zuletzt kann damit die stark wachsende Zahl ver{\"o}ffentlichter Methoden zur Unterst{\"u}tzung von objektorientierter Systemanalyse und objektorientiertem Systemdesign erkl{\"a}rt werden.",
+    isbn="978-3-662-00659-7",
+    doi="10.1007/978-3-662-00659-7_1",
+    url="https://doi.org/10.1007/978-3-662-00659-7_1"
+}
+
