docs: wording and formatting updates

--- a/docs/repetitorium/literatur.bib
+++ b/docs/repetitorium/literatur.bib
@@ -55,6 +55,27 @@ and Winter, Robert",
     url="https://doi.org/10.1007/978-3-658-00521-4_14"
 }
 
+@Inbook{AABG14m,
+    author="Alpar, Paul
+and Alt, Rainer
+and Bensberg, Frank
+and Grob, Heinz Lothar
+and Weimann, Peter
+and Winter, Robert",
+    title="Begriffe und Vorgehensweisen",
+    bookTitle="Anwendungsorientierte Wirtschaftsinformatik: Strategische Planung, Entwicklung und Nutzung von Informationssystemen",
+    year="2014",
+    publisher="Springer Fachmedien Wiesbaden",
+    address="Wiesbaden",
+    pages="297--314",
+    abstract="Der vierte Teil konzentriert sich auf die Gestaltung und Entwicklung von IS. Dabei sind zwei grunds{\"a}tzlich unterschiedliche Vorgehensweisen zu differenzieren:(1)IS werden anforderungsspezifisch im Rahmen eines Eigenentwicklungsprojekts individuell entwickelt.(2)Es werden standardisierte IS eingef{\"u}hrt und in die jeweilige betriebliche Informationsverarbeitung integriert.",
+    isbn="978-3-658-00521-4",
+    doi="10.1007/978-3-658-00521-4_13",
+    url="https://doi.org/10.1007/978-3-658-00521-4_13"
+}
+
+
+
 @ARTICLE{Boe88,
     author={Boehm, B. W.},
     journal={Computer},
