docs: update bib refs

--- a/docs/repetitorium/literatur.bib
+++ b/docs/repetitorium/literatur.bib
@@ -176,3 +176,44 @@ and Rundshagen, Michael",
     url="https://doi.org/10.1007/978-3-662-00659-7_1"
 }
 
+@book{Coh09,
+    author = {Cohn, Mike},
+    title = {Succeeding with Agile: Software Development Using Scrum},
+    year = {2009},
+    isbn = {0321579364},
+    publisher = {Addison-Wesley Professional},
+    edition = {1st},
+    abstract = {Proven, 100\% Practical Guidance for Making Scrum and Agile Work in Any Organization This is the definitive, realistic, actionable guide to starting fast with Scrum and agileand then succeeding over the long haul. Leading agile consultant and practitioner Mike Cohn presents detailed recommendations, powerful tips, and real-world case studies drawn from his unparalleled experience helping hundreds of software organizations make Scrum and agile work. Succeeding with Agile is for pragmatic software professionals who want real answers to the most difficult challenges they face in implementing Scrum. Cohn covers every facet of the transition: getting started, helping individuals transition to new roles, structuring teams, scaling up, working with a distributed team, and finally, implementing effective metrics and continuous improvement. Throughout, Cohn presents Things to Try Now sections based on his most successful advice. Complementary Objection sections reproduce typical conversations with those resisting change and offer practical guidance for addressing their concerns. Coverage includes Practical ways to get started immediatelyand get good fast Overcoming individual resistance to the changes Scrum requires Staffing Scrum projects and building effective teams Establishing improvement communities of people who are passionate about driving change Choosing which agile technical practices to use or experiment with Leading self-organizing teams Making the most of Scrum sprints, planning, and quality techniques Scaling Scrum to distributed, multiteam projects Using Scrum on projects with complex sequential processes or challenging compliance and governance requirements Understanding Scrums impact on HR, facilities, and project management Whether you've completed a few sprints or multiple agile projects and whatever your rolemanager, developer, coach, ScrumMaster, product owner, analyst, team lead, or project leadthis book will help you succeed with your very next project. Then, it will help you go much further: It will help you transform your entire development organization.}
+}
+
+@book{Amb04,
+    author = {Ambler, Scott},
+    year = {2004},
+    month = {03},
+    pages = {},
+    title = {The object primer: agile modeling-driven development with UML 2.0},
+    isbn = {9780521540186},
+    doi = {10.1017/CBO9780511584077}
+}
+
+
+@BOOK{Oes05,
+    title     = "Analyse und Design mit UML 2",
+    author    = "Oestereich, Bernd",
+    publisher = "Oldenbourg Wissenschaftsverlag GmbH",
+    year      =  2005,
+    isbn      = {3486576542},
+}
+
+
+@inbook{CL01,
+    author = {Constantine, Larry L. and Lockwood, Lucy A. D.},
+    title = {Structure and style in use cases for user interface design},
+    year = {2001},
+    isbn = {0201657899},
+    publisher = {Addison-Wesley Longman Publishing Co., Inc.},
+    address = {USA},
+    booktitle = {Object Modeling and User Interface Design: Designing Interactive Systems},
+    pages = {245–279},
+    numpages = {35}
+}
