docs: update index and bib refs

--- a/docs/tests/einsendeaufgaben1/Einsendeaufgaben1.tex
+++ b/docs/tests/einsendeaufgaben1/Einsendeaufgaben1.tex
@@ -61,6 +61,7 @@
 
 \usepackage{tcolorbox}
 \usepackage[table]{colortbl}% http://ctan.org/pkg/xcolor
+\usepackage[table,xcdraw]{xcolor}
 %\else
 %\usepackage{graphicx}
 %\usepackage[plainpages=false]{hyperref}
@@ -196,6 +197,12 @@
 	\input{chapters/aufgabe 3/index}
 	\input{chapters/aufgabe 4/index}
 	\input{chapters/aufgabe 5/index}
+	\input{chapters/aufgabe 6/index}
+	\input{chapters/aufgabe 7/index}
+	\input{chapters/aufgabe 8/index}
+	\input{chapters/aufgabe 9/index}
+	\input{chapters/aufgabe 10/index}
+	\input{chapters/aufgabe 11/index}
 
 %\input{chapters/ZusammenfassungAusblick}
 % ...
