--- a/docs/tests/einsendeaufgaben1/literatur.bib
+++ b/docs/tests/einsendeaufgaben1/literatur.bib
@@ -44,7 +44,7 @@ and Grob, Heinz Lothar
 and Weimann, Peter
 and Winter, Robert",
     title="Phasenmodelle in der Systementwicklung",
-    bookTitle="Anwendungsorientierte Wirtschaftsinformatik: Strategische Planung, Entwicklung und Nutzung von Informationssystemen",
+    bookTitle="Anwendungsorientierte Wirtschaftsinformatik",
     year="2014",
     publisher="Springer Fachmedien Wiesbaden",
     address="Wiesbaden",
