chore: restructure doc after parts

--- a/docs/repetitorium/Repetitorium SE.tex
+++ b/docs/repetitorium/Repetitorium SE.tex
@@ -208,11 +208,14 @@
 	\mainmatter                        		% Hauptteil (ab hier arab. Seitenzahlen)
 %--------------------------------------------------------------------------
 % Die Kapitel werden in separaten .tex-Dateien abgelegt und hier eingebunden.
-	\input{chapters/teil1}
-	\input{chapters/Software und Software Engineering/index}
-	\input{chapters/Uebersicht ueber die Phasen des Entwicklungszyklus/index}
-	\input{chapters/Prozessmodelle/index}
-	\input{chapters/Requirements Engineering/index}
+	\input{part one/teil1}
+	\input{part one/Software und Software Engineering/index}
+	\input{part one/Uebersicht ueber die Phasen des Entwicklungszyklus/index}
+	\input{part one/Prozessmodelle/index}
+	\input{part one/Requirements Engineering/index}
+
+	\input{part two/teil2}
+	\input{part two/Objektorientierte Analyse/index}
 
 	\glsaddall
 	\printnoidxglossary[title=Glossar, toctitle=Glossar]
