--- a/docs/repetitorium/part one/Prozessmodelle/inkrementell.tex
+++ b/docs/repetitorium/part one/Prozessmodelle/inkrementell.tex
@@ -7,7 +7,7 @@ Die Auslieferung der einzelnen Inkremente an den Kunden findet bereits nach Fert
 
 \begin{figure}
     \centering
-    \includegraphics[scale=0.4]{chapters/Prozessmodelle/img/inkrementell}
+    \includegraphics[scale=0.4]{part one/Prozessmodelle/img/inkrementell}
     \caption{Inkrementelles Phasenmodell.
     Nach der Integration und den Tests gehen die einzelnen Inkremente über in den Betrieb.
         (Quelle: in Anlehnung an \cite[322]{AABG14n})}
