--- a/docs/repetitorium/part one/Prozessmodelle/iterativ.tex
+++ b/docs/repetitorium/part one/Prozessmodelle/iterativ.tex
@@ -23,7 +23,7 @@ Gleichzeitig zeichnet sich die Endphase eines iterativ durchgeführten Projektes
 
 \begin{figure}
     \centering
-    \includegraphics[scale=0.4]{chapters/Prozessmodelle/img/iterativ}
+    \includegraphics[scale=0.4]{part one/Prozessmodelle/img/iterativ}
     \caption{Bei der Anwendung des iterativen Modells können einzelne Phasen überprungen werden. (Quelle: in Anlehnung an \cite[28, Abb. 3.3]{Wed09})}
     \label{fig:iterativ}
 \end{figure}
