--- a/docs/repetitorium/part one/Prozessmodelle/nebenlaeufig.tex
+++ b/docs/repetitorium/part one/Prozessmodelle/nebenlaeufig.tex
@@ -11,7 +11,7 @@ Die Aufgaben können
 
 \begin{figure}
     \centering
-    \includegraphics[scale=0.4]{chapters/Prozessmodelle/img/nebenlaeufigkeit}
+    \includegraphics[scale=0.4]{part one/Prozessmodelle/img/nebenlaeufigkeit}
     \caption{Skizze von nebenläufigem Vorgehen. (Quelle: in Anlehnung an \cite[29]{Wed09})}
     \label{fig:nebenlaeufig}
 \end{figure}
