--- a/docs/repetitorium/part one/Requirements Engineering/einfuehrung.tex
+++ b/docs/repetitorium/part one/Requirements Engineering/einfuehrung.tex
@@ -19,7 +19,7 @@ Fehler in den Anforderungen wirken sich also i.d.R. auf alle Phasen aus, und je 
 
 \begin{figure}
     \centering
-    \includegraphics[scale=0.4]{chapters/Requirements Engineering/img/aufwand}
+    \includegraphics[scale=0.4]{part one/Requirements Engineering/img/aufwand}
     \caption{Je später Änderungen durchgeführt werden müssen, die sich durch fehlerhafte Anforderungen ergeben, desto aufwändiger wird es. (Quelle: in Anlehnung an \cite[38 f., Abb. 4.1 und 4.2]{Wed09})}
     \label{fig:aufwand}
 \end{figure}
