--- a/docs/repetitorium/part one/Requirements Engineering/kontextdiagramme.tex
+++ b/docs/repetitorium/part one/Requirements Engineering/kontextdiagramme.tex
@@ -9,7 +9,7 @@ Als Notation für Kontextdiagramme werden i.d.R. \textbf{UML-Use-Case-Diagramme}
 
 \begin{figure}
     \centering
-    \includegraphics[scale=0.4]{chapters/Requirements Engineering/img/usecaseexample}
+    \includegraphics[scale=0.4]{part one/Requirements Engineering/img/usecaseexample}
     \caption{Beispiel für ein Kontextdiagramm. (Quelle: eigene)}
     \label{fig:usecaseexample}
 \end{figure}
