--- a/docs/repetitorium/part one/Requirements Engineering/vorgehen.tex
+++ b/docs/repetitorium/part one/Requirements Engineering/vorgehen.tex
@@ -21,7 +21,7 @@ Das Ermitteln von Anforderungen erfolgt in drei Schritten (s. Abbildung~\ref{fig
 
 \begin{figure}
     \centering
-    \includegraphics[scale=0.35]{chapters/Requirements Engineering/img/requirementsengineering}
+    \includegraphics[scale=0.35]{part one/Requirements Engineering/img/requirementsengineering}
     \caption{Phasen des Requirement Engineerings sowie deren Tätigkeiten und Ergebnisse. (Quelle: in Anlehnung an~\cite[84]{Wed09})}
     \label{fig:requirementsengineering}
 \end{figure}
