--- a/docs/repetitorium/part one/Uebersicht ueber die Phasen des Entwicklungszyklus/opportunistischesvorgehen.tex
+++ b/docs/repetitorium/part one/Uebersicht ueber die Phasen des Entwicklungszyklus/opportunistischesvorgehen.tex
@@ -11,7 +11,7 @@
 
 \begin{figure}
     \centering
-    \includegraphics[scale=0.4]{chapters/Uebersicht ueber die Phasen des Entwicklungszyklus/img/opportunistischeentwicklung}
+    \includegraphics[scale=0.4]{part one/Uebersicht ueber die Phasen des Entwicklungszyklus/img/opportunistischeentwicklung}
     \caption{Vorgehen bei \textit{opportunistischer} Softwareentwicklung. ``Testing`` entspricht hier einem bloßen ``Ausprobieren`` der umgesetzten Anforderungen. (Quelle: in Anlehnung an \cite[14, Abb. 2.1]{Wed09})}
     \label{fig:opportunistischeentwicklung}
 \end{figure}
