--- a/docs/repetitorium/part one/Uebersicht ueber die Phasen des Entwicklungszyklus/wasserfallmodell.tex
+++ b/docs/repetitorium/part one/Uebersicht ueber die Phasen des Entwicklungszyklus/wasserfallmodell.tex
@@ -23,7 +23,7 @@ Die Ergebnisse der Phasen sind \textit{Dokumente},\textit{Modelle},\textit{Code}
 
 \begin{figure}
     \centering
-    \includegraphics[scale=0.3]{chapters/Uebersicht ueber die Phasen des Entwicklungszyklus/img/wasserfallmodell}
+    \includegraphics[scale=0.3]{part one/Uebersicht ueber die Phasen des Entwicklungszyklus/img/wasserfallmodell}
     \caption{Phasen des Wasserfallmodells. (Quelle: in Anlehnung an \cite[318, Abbildung 14-3]{AABG14n})}
     \label{fig:wasserfallmodell}
 \end{figure}
