--- a/docs/repetitorium/part one/teil1.tex
+++ b/docs/repetitorium/part one/teil1.tex
@@ -1,4 +1,4 @@
-\chapter*{Teil 1 - Grundlagen der Softwaretechnik und Requirements Engineering}
+\part{Teil 1 - Grundlagen der Softwaretechnik und Requirements Engineering}
 
 \vspace{2cm}
 \blockquote[{\url{https://fg-swt.gi.de}\footnote{abgerufen 04.04.2024}}]{``Unter \textbf{Softwaretechnik} (engl. \textit{Software Engineering}) versteht man allgemein die (Ingenieur-) Wissenschaft, die die kosteneffiziente Entwicklung von qualitativ hochwertiger Software behandelt.``}
@@ -28,3 +28,5 @@
     \item einen Überblick über existierende Vorgehensmodelle besitzen und ihre Anwendbarkeit auf Problemstellungen beurteilen können
     \item in der Lage sein, Anforderungen geeignet aufzunehmen und schriftlich zu erfassen
 \end{itemize}
+
+\newpage
