--- a/docs/repetitorium/literatur.bib
+++ b/docs/repetitorium/literatur.bib
@@ -22,7 +22,13 @@
     author = {Wedemann, Gero},
     title = {Grundlagen der Softwaretechnik und Requirements Engineering},
     year = {2009},
-    isbn = {0321125215},
+    publisher = {Trier University of Applied Sciences},
+}
+
+@book{Wed09b,
+    author = {Wedemann, Gero},
+    title = {Objektorientierte Analyse und Entwurf},
+    year = {2009},
     publisher = {Trier University of Applied Sciences},
 }
 
