--- a/docs/repetitorium/part one/Requirements Engineering/loesungsvorschlaege.tex
+++ b/docs/repetitorium/part one/Requirements Engineering/loesungsvorschlaege.tex
@@ -36,7 +36,7 @@ s. Abbildung~\ref{fig:aufgabe4-6}.
 
 \begin{figure}
     \centering
-    \includegraphics[scale=0.35]{chapters/Requirements Engineering/img/aufgabe4.6}
+    \includegraphics[scale=0.35]{part one/Requirements Engineering/img/aufgabe4.6}
     \caption{}
     \label{fig:aufgabe4-6}
 \end{figure}
