--- a/docs/repetitorium/part one/Requirements Engineering/zusammenfassung.tex
+++ b/docs/repetitorium/part one/Requirements Engineering/zusammenfassung.tex
@@ -23,7 +23,7 @@
 
 \begin{figure}
     \centering
-    \includegraphics[scale=0.35]{chapters/Requirements Engineering/img/anforderung}
+    \includegraphics[scale=0.35]{part one/Requirements Engineering/img/anforderung}
     \caption{Abfolge der Erfassung verschiedener Anforderungen. (Quelle: eigene)}
     \label{fig:anforderung}
 \end{figure}
