chore(docs): update references, wording and index

--- a/docs/repetitorium/literatur.bib
+++ b/docs/repetitorium/literatur.bib
@@ -223,3 +223,13 @@ and Rundshagen, Michael",
     pages = {245–279},
     numpages = {35}
 }
+
+
+@book{Ull23,
+    title={Java ist auch eine Insel: Das umfassende Handbuch, 17. Auflage},
+    author={Ullenboom, Christian},
+    publisher={Galileo Computing},
+    isbn={978-3-8362-9544-4},
+    year={2023}
+}
+
