--- a/docs/repetitorium/part two/Objektorientierte Analyse/index.tex
+++ b/docs/repetitorium/part two/Objektorientierte Analyse/index.tex
@@ -6,4 +6,7 @@
 
 
 \input{part two/Objektorientierte Analyse/modelle in analyse und entwurf}
+\input{part two/Objektorientierte Analyse/klassen und objekte}
+\input{part two/Objektorientierte Analyse/beziehungen von klassen}
 \newpage
+
