--- a/docs/repetitorium/part two/Objektorientierte Analyse/klassen und objekte.tex
+++ b/docs/repetitorium/part two/Objektorientierte Analyse/klassen und objekte.tex
@@ -10,7 +10,7 @@
 In der \textbf{UML} werden Attribute und Verantwortlichkeiten oder Operationen in \textbf{Compartments} (dt. \textit{Abteilungen}) dargestellt.\\
 
 \noindent
-Einschränken des Typs können hinter dem Typ in der \textbf{Object Constraint Language}\footnote{
+Einschränken des Typs können hinter dem Typ in geschweiften Klammern in der \textbf{Object Constraint Language}-Notation\footnote{
 s. Version 2.4: \url{https://www.omg.org/spec/OCL}, abgerufen 11.04.2024
 } (\textbf{OCL}) angegeben werden.\\
 Diese Angaben - oder als Kommentar in Textform angegeben - ersetzen im \textit{Klassendiagramm der Analyse} das \textbf{Datadictionary} (s. Abschnitt~\ref{sec:datadictionary-und-mengengerust}) (s. Abbildung~\ref{fig:moneyocl}).
