docs: add Modell Cheat Sheet

--- a/docs/repetitorium/part two/Objektorientierte Analyse/modelle in analyse und entwurf.tex
+++ b/docs/repetitorium/part two/Objektorientierte Analyse/modelle in analyse und entwurf.tex
@@ -50,7 +50,7 @@ Das Erstellen eines Modells der geplanten Software bietet den Vorteil, das Entwu
     Ein \textbf{Modell} ist ein Produkt des \textbf{Modellierungsvorgangs}.\\
 
     \noindent
-    Es beschriebt tatsächliche oder gedachte Gegenstände oder Konzepte und deren Beziehungen.\\
+    Es beschreibt tatsächliche oder gedachte Gegenstände oder Konzepte und deren Beziehungen.\\
 
     \noindent
     Ein Modell erfasst diese Konzepte nicht vollständig, sondern \textbf{abstrakt}, also verkürzt und vereinfacht (vgl. \cite[2]{Wed09b}).
