docs: add section Domänenmodell

--- a/docs/repetitorium/part two/Objektorientierte Analyse/beziehungen von klassen.tex
+++ b/docs/repetitorium/part two/Objektorientierte Analyse/beziehungen von klassen.tex
@@ -1,4 +1,4 @@
-\section{Beziehungen von Klassen}
+\section{Beziehungen von Klassen}\label{sec:beziehungen-von-klassen}
 
 Klassen können auf drei unterschiedliche Arten miteinander in Beziehung stehen:
 
