--- a/docs/repetitorium/part two/Objektorientierte Analyse/index.tex
+++ b/docs/repetitorium/part two/Objektorientierte Analyse/index.tex
@@ -8,5 +8,6 @@
 \input{part two/Objektorientierte Analyse/modelle in analyse und entwurf}
 \input{part two/Objektorientierte Analyse/klassen und objekte}
 \input{part two/Objektorientierte Analyse/beziehungen von klassen}
+\input{part two/Objektorientierte Analyse/domänenmodell}
 \newpage
 
