--- a/docs/repetitorium/part two/Objektorientierte Analyse/index.tex
+++ b/docs/repetitorium/part two/Objektorientierte Analyse/index.tex
@@ -9,5 +9,6 @@
 \input{part two/Objektorientierte Analyse/klassen und objekte}
 \input{part two/Objektorientierte Analyse/beziehungen von klassen}
 \input{part two/Objektorientierte Analyse/domänenmodell}
+\input{part two/Objektorientierte Analyse/modellierung der dynamik}
 \newpage
 
