docs: add section Analysemuster

--- a/docs/repetitorium/part two/Objektorientierte Analyse/index.tex
+++ b/docs/repetitorium/part two/Objektorientierte Analyse/index.tex
@@ -10,5 +10,6 @@
 \input{part two/Objektorientierte Analyse/beziehungen von klassen}
 \input{part two/Objektorientierte Analyse/domänenmodell}
 \input{part two/Objektorientierte Analyse/modellierung der dynamik}
+\input{part two/Objektorientierte Analyse/analysemuster}
 \newpage
 
