--- a/docs/repetitorium/part two/Objektorientierte Analyse/index.tex
+++ b/docs/repetitorium/part two/Objektorientierte Analyse/index.tex
@@ -11,5 +11,6 @@
 \input{part two/Objektorientierte Analyse/domänenmodell}
 \input{part two/Objektorientierte Analyse/modellierung der dynamik}
 \input{part two/Objektorientierte Analyse/analysemuster}
+\input{part two/Objektorientierte Analyse/dialogentwurf}
 \newpage
 
