--- a/docs/repetitorium/part two/Objektorientierte Analyse/index.tex
+++ b/docs/repetitorium/part two/Objektorientierte Analyse/index.tex
@@ -12,5 +12,6 @@
 \input{part two/Objektorientierte Analyse/modellierung der dynamik}
 \input{part two/Objektorientierte Analyse/analysemuster}
 \input{part two/Objektorientierte Analyse/dialogentwurf}
+\input{part two/Objektorientierte Analyse/zusammenfassung}
 \newpage
 
